--- a/translations/en/LC_MESSAGES/messages.po
+++ b/translations/en/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2023-07-07 19:03+0400\n"
+"POT-Creation-Date: 2023-07-15 18:47+0400\n"
 "PO-Revision-Date: 2023-07-07 19:11+0400\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: en\n"
@@ -18,57 +18,86 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.12.1\n"
 
-#: app/templates/layouts/base.html:30
-msgid "პოპულარული"
-msgstr "პოპულარული"
+#: app/templates/auth/login.html:5
+msgid "შესვლა"
+msgstr "შესვლა"
 
-#: app/templates/layouts/base.html:31 app/templates/layouts/base.html:65
-msgid "კითხვები"
-msgstr "კითხვები"
+#: app/templates/auth/login.html:18
+msgid "გავეცანი დოკუმენტს"
+msgstr "გავეცანი დოკუმენტს"
 
-#: app/templates/layouts/base.html:39 app/templates/layouts/base.html:63
-#: app/templates/main/index.html:42
-msgid "მიტანის სერვისი"
-msgstr "მიტანის სერვისი"
-
-#: app/templates/layouts/base.html:40 app/templates/layouts/base.html:64
-msgid "კონტაქტი"
-msgstr "კონტაქტი"
-
-#: app/templates/layouts/base.html:61
-msgid "ბაჭიები"
-msgstr "ბაჭიები"
-
-#: app/templates/layouts/base.html:62
-msgid "ცხოველები"
-msgstr "ცხოველები"
-
-#: app/templates/layouts/base.html:71
-msgid "კალათა ცარიელია"
-msgstr "კალათა ცარიელია"
-
-#: app/templates/layouts/base.html:73
-msgid "აირჩიე ბაჭია"
-msgstr "აირჩიე ბაჭია"
-
-#: app/templates/layouts/base.html:74
-msgid "აირჩიე სხვა ცხოველი"
-msgstr "აირჩიე სხვა ცხოველი"
-
-#: app/templates/layouts/base.html:110
+#: app/templates/auth/login.html:19 app/templates/layouts/base.html:117
+#: app/templates/main/terms.html:6
 msgid "წესები და პირობები"
 msgstr "წესები და პირობები"
 
-#: app/templates/main/index.html:25
+#: app/templates/auth/login.html:26
+msgid "არ გაქვთ პროფილი? გაიარეთ"
+msgstr "არ გაქვთ პროფილი? გაიარეთ"
+
+#: app/templates/auth/login.html:27
+msgid "რეგისტრაცია"
+msgstr "რეგისტრაცია"
+
+#: app/templates/auth/login.html:30
+msgid "დაგავიწყდათ პაროლი"
+msgstr "დაგავიწყდათ პაროლი"
+
+#: app/templates/auth/login.html:31
+msgid "პაროლის აღდგენა"
+msgstr "პაროლის აღდგენა"
+
+#: app/templates/layouts/base.html:35
+msgid "პოპულარული"
+msgstr "პოპულარული"
+
+#: app/templates/layouts/base.html:36 app/templates/layouts/base.html:78
+msgid "კითხვები"
+msgstr "კითხვები"
+
+#: app/templates/layouts/base.html:44 app/templates/layouts/base.html:76
+#: app/templates/main/index.html:40
+msgid "მიტანის სერვისი"
+msgstr "მიტანის სერვისი"
+
+#: app/templates/layouts/base.html:45 app/templates/layouts/base.html:77
+msgid "კონტაქტი"
+msgstr "კონტაქტი"
+
+#: app/templates/layouts/base.html:73
+msgid "ავტორიზაცია"
+msgstr "ავტორიზაცია"
+
+#: app/templates/layouts/base.html:74
+msgid "ბაჭიები"
+msgstr "ბაჭიები"
+
+#: app/templates/layouts/base.html:75
+msgid "ცხოველები"
+msgstr "ცხოველები"
+
+#: app/templates/layouts/base.html:84
+msgid "კალათა ცარიელია"
+msgstr "კალათა ცარიელია"
+
+#: app/templates/layouts/base.html:86
+msgid "აირჩიე ბაჭია"
+msgstr "აირჩიე ბაჭია"
+
+#: app/templates/layouts/base.html:87
+msgid "აირჩიე სხვა ცხოველი"
+msgstr "აირჩიე სხვა ცხოველი"
+
+#: app/templates/main/index.html:24
 msgid "პოპულარული სათამაშოები"
 msgstr "პოპულარული სათამაშოები"
 
-#: app/templates/main/index.html:34 app/templates/product/bunnies.html:19
-#: app/templates/product/product-page.html:22
+#: app/templates/main/index.html:32 app/templates/product/bunnies.html:24
+#: app/templates/product/product-page.html:30
 msgid "შეძენა"
 msgstr "შეძენა"
 
-#: app/templates/main/index.html:54
+#: app/templates/main/index.html:52
 msgid ""
 "თბილისში მიტანა შესაძლებელია შეკვეთიდან მეორე დღეს. მიტანის ღირებულება "
 "ცენტრალურ უბნებში 6 ლარი, ხოლო გარეუბნებში 8 ლარია."
@@ -76,7 +105,7 @@ msgstr ""
 "თბილისში მიტანა შესაძლებელია შეკვეთიდან მეორე დღეს. მიტანის ღირებულება "
 "ცენტრალურ უბნებში 6 ლარი, ხოლო გარეუბნებში 8 ლარია."
 
-#: app/templates/main/index.html:55
+#: app/templates/main/index.html:53
 msgid ""
 "რეგიონებში სათამაშოები იგზავნება ფოსტით. გაგზავნის ღირებულება ქალაქებში "
 "10 ლარი, ხოლო სოფლებში 12 ლარია. ამანათის ჩამოსვლის დრო დამოკიდებულია "
@@ -86,7 +115,151 @@ msgstr ""
 "10 ლარი, ხოლო სოფლებში 12 ლარია. ამანათის ჩამოსვლის დრო დამოკიდებულია "
 "რეგიონზე."
 
-#: app/templates/product/product-page.html:18
+#: app/templates/main/terms.html:9
+msgid ""
+"ეს წესები და პირობები არის იურიდიულად მავალდებულებელი შეთანხმება "
+"„ამიგურუმი თბილისსა“ (შემდგომში „მაღაზია“) და ყველა იმ მომხმარებელს "
+"შორის, რომელიც იძენს „მაღაზიაში“ სათამაშოს ან/და მომსახურებას (შემდგომში "
+"„მომხმარებელი“). "
+msgstr ""
+"ეს წესები და პირობები არის იურიდიულად მავალდებულებელი შეთანხმება "
+"„ამიგურუმი თბილისსა“ (შემდგომში „მაღაზია“) და ყველა იმ მომხმარებელს "
+"შორის, რომელიც იძენს „მაღაზიაში“ სათამაშოს ან/და მომსახურებას (შემდგომში "
+"„მომხმარებელი“). "
+
+#: app/templates/main/terms.html:12
+msgid ""
+"ამ ვებგვერდის გამოყენებით „მომხმარებელი“ ადასტურებს, რომ ეთანხმება "
+"წინამდებარე წესებსა და პირობებს."
+msgstr ""
+"ამ ვებგვერდის გამოყენებით „მომხმარებელი“ ადასტურებს, რომ ეთანხმება "
+"წინამდებარე წესებსა და პირობებს."
+
+#: app/templates/main/terms.html:15
+msgid "მუხლი 1"
+msgstr "მუხლი 1"
+
+#: app/templates/main/terms.html:17
+msgid ""
+"„მაღაზიის“ ვებგვერდზე განთავსებული ლოგო, ფოტოები, პროდუქციის დიზაინი, "
+"აღწერა, სერვისები, სახელწოდება „ამიგურუმი თბილისი“ არის „მაღაზიის“ "
+"საკუთრება და დაცულია კანონით. ამრიგად, მისი გამოყენება „მომხმარებელს“ "
+"მხოლოდ პირადი მოხმარებისთვის შეუძლია და არ აქვს უფლება გადაამუშავოს, "
+"გადათარგმნოს, გაყიდოს ან/და ანაზღაურებადი მიზნებისთვის გამოიყენოს იგი."
+msgstr ""
+"„მაღაზიის“ ვებგვერდზე განთავსებული ლოგო, ფოტოები, პროდუქციის დიზაინი, "
+"აღწერა, სერვისები, სახელწოდება „ამიგურუმი თბილისი“ არის „მაღაზიის“ "
+"საკუთრება და დაცულია კანონით. ამრიგად, მისი გამოყენება „მომხმარებელს“ "
+"მხოლოდ პირადი მოხმარებისთვის შეუძლია და არ აქვს უფლება გადაამუშავოს, "
+"გადათარგმნოს, გაყიდოს ან/და ანაზღაურებადი მიზნებისთვის გამოიყენოს იგი."
+
+#: app/templates/main/terms.html:21
+msgid "მუხლი 2"
+msgstr "მუხლი 2"
+
+#: app/templates/main/terms.html:23
+msgid ""
+"ამ ვებგვერდის გამოყენებით „მომხმარებელი“ ეთანხმება „მაღაზიისაგან“ მიიღოს "
+"მოკლე ტექსტური შეტყობინებები ტელეფონზე ან/და წერილები ელფოსტაზე, მის "
+"შეკვეთასთან დაკავშირებით."
+msgstr ""
+"ამ ვებგვერდის გამოყენებით „მომხმარებელი“ ეთანხმება „მაღაზიისაგან“ მიიღოს "
+"მოკლე ტექსტური შეტყობინებები ტელეფონზე ან/და წერილები ელფოსტაზე, მის "
+"შეკვეთასთან დაკავშირებით."
+
+#: app/templates/main/terms.html:27
+msgid ""
+"ამ ვებგვერდზე რეგისტრაციის ან/და შეკვეთის განთავსების გზით „მაღაზიისთვის“"
+" გადმოცემული პერსონალური ინფორმაციის (შემდგომში „პერსონალური ინფორმაცია“)"
+" უსაფრთხოებაზე პასუხისმგებელია „მაღაზია“;"
+msgstr ""
+"ამ ვებგვერდზე რეგისტრაციის ან/და შეკვეთის განთავსების გზით „მაღაზიისთვის“"
+" გადმოცემული პერსონალური ინფორმაციის (შემდგომში „პერსონალური ინფორმაცია“)"
+" უსაფრთხოებაზე პასუხისმგებელია „მაღაზია“;"
+
+#: app/templates/main/terms.html:30
+msgid ""
+"„მაღაზია“ უფლებამოსილია დაამუშავოს „პერსონალური ინფორმაცია“, გაუგზავნოს "
+"„პერსონალური ინფორმაციის“ მფლობელს სარეკლამო შეტყობინებები მობილურ "
+"ტელეფონზე და ელ-ფოსტაზე."
+msgstr ""
+"„მაღაზია“ უფლებამოსილია დაამუშავოს „პერსონალური ინფორმაცია“, გაუგზავნოს "
+"„პერსონალური ინფორმაციის“ მფლობელს სარეკლამო შეტყობინებები მობილურ "
+"ტელეფონზე და ელ-ფოსტაზე."
+
+#: app/templates/main/terms.html:33
+msgid ""
+"„მაღაზია“ უფლებამოსილია დაამუშავოს „პერსონალური ინფორმაცია“ პერსონალურ "
+"მონაცემთა დაცვის შესახებ საქართველოს კანონის მიხედვით;"
+msgstr ""
+"„მაღაზია“ უფლებამოსილია დაამუშავოს „პერსონალური ინფორმაცია“ პერსონალურ "
+"მონაცემთა დაცვის შესახებ საქართველოს კანონის მიხედვით;"
+
+#: app/templates/main/terms.html:36
+msgid ""
+"„მაღაზია“ უფლებას იტოვებს საქართველოს კანონმდებლობის მოთხოვნით ან/და "
+"სამართლებრივ დავებში საკუთარი ინტერესების დასაცავად, ან/და „მაღაზიის“ "
+"რეორგანიზაციის, შერწყმის ან გაყიდვის შედეგად გადასცეს „პერსონალური "
+"ინფორმაცია“ მესამე პირებს;"
+msgstr ""
+"„მაღაზია“ უფლებას იტოვებს საქართველოს კანონმდებლობის მოთხოვნით ან/და "
+"სამართლებრივ დავებში საკუთარი ინტერესების დასაცავად, ან/და „მაღაზიის“ "
+"რეორგანიზაციის, შერწყმის ან გაყიდვის შედეგად გადასცეს „პერსონალური "
+"ინფორმაცია“ მესამე პირებს;"
+
+#: app/templates/main/terms.html:39
+msgid "მუხლი 3"
+msgstr "მუხლი 3"
+
+#: app/templates/main/terms.html:41
+msgid ""
+"„მომხმარებელი“ პასუხისმგებელია შეკვეთის განთავსებისას მის მიერ მოწოდებული"
+" ინფორმაციის სისწორეზე. ამ ინფორმაციაში ხარვეზის გამო არასწორად "
+"შესრულებულ შეკვეთაზე პასუხისმგებელია თავად „მომხმარებელი“ და არა "
+"„მაღაზია“;"
+msgstr ""
+"„მომხმარებელი“ პასუხისმგებელია შეკვეთის განთავსებისას მის მიერ მოწოდებული"
+" ინფორმაციის სისწორეზე. ამ ინფორმაციაში ხარვეზის გამო არასწორად "
+"შესრულებულ შეკვეთაზე პასუხისმგებელია თავად „მომხმარებელი“ და არა "
+"„მაღაზია“;"
+
+#: app/templates/main/terms.html:45
+msgid ""
+"„მომხმარებელი“ უფლებამოსილია გააუქმოს შეკვეთა ამ შეკვეთის მიტანის "
+"თარიღამდე 1 (ერთი) კალენდარული დღით ადრე მაინც, თუმცა თუკი შეკვეთა ამ "
+"დროისთვის უკვე გამოგზავნილია „მაღაზიის“ მიერ, მაშინ „მომხმარებელს“ თანხა "
+"დაუბრუნდება შეკვეთის მიტანის და უკან დაბრუნების თანხის გამოკლებით, "
+"„მაღაზიის“ მიერ შეკვეთის უკან მიღებიდან 5 (ხუთი) სამუშაო დღის "
+"განმავლობაში."
+msgstr ""
+"„მომხმარებელი“ უფლებამოსილია გააუქმოს შეკვეთა ამ შეკვეთის მიტანის "
+"თარიღამდე 1 (ერთი) კალენდარული დღით ადრე მაინც, თუმცა თუკი შეკვეთა ამ "
+"დროისთვის უკვე გამოგზავნილია „მაღაზიის“ მიერ, მაშინ „მომხმარებელს“ თანხა "
+"დაუბრუნდება შეკვეთის მიტანის და უკან დაბრუნების თანხის გამოკლებით, "
+"„მაღაზიის“ მიერ შეკვეთის უკან მიღებიდან 5 (ხუთი) სამუშაო დღის "
+"განმავლობაში."
+
+#: app/templates/main/terms.html:48
+msgid "მუხლი 4"
+msgstr "მუხლი 4"
+
+#: app/templates/main/terms.html:50
+msgid ""
+"ამ წესებისა და პირობების შესრულების ადგილია „მაღაზიის“ იურიდიული "
+"მისამართი;"
+msgstr ""
+"ამ წესებისა და პირობების შესრულების ადგილია „მაღაზიის“ იურიდიული "
+"მისამართი;"
+
+#: app/templates/main/terms.html:54
+msgid ""
+"ამ წესებისა და პირობების რომელიმე პუნქტის ან მუხლის ბათილობა დანარჩენი "
+"პუნქტებისა და მუხლების ბათილობას არ გამოიწვევს."
+msgstr ""
+"ამ წესებისა და პირობების რომელიმე პუნქტის ან მუხლის ბათილობა დანარჩენი "
+"პუნქტებისა და მუხლების ბათილობას არ გამოიწვევს."
+
+#: app/templates/product/product-page.html:26
 msgid "ღირებულება"
 msgstr "ღირებულება"
 
